# ProjetProg_ImacraftSB

./: .gitignore  CMakeLists.txt  README.md
assets/textures/: .gitkeep
include/: Cube.hpp  Cursor.hpp  FreeFlyCamera.hpp  Interface.hpp  Lights.hpp  Math.hpp  Scene.hpp  Texture.hpp  TrackballCamera.hpp  View.hpp
lib/glimac/: Makefile  cmake_install.cmake
lib/glimac/include/glimac/: FreeFlyCamera.hpp  FreeflyCamera.hpp  TrackballCamera.hpp
lib/glimac/src/: FreeFlyCamera.cpp  FreeflyCamera.cpp  TrackballCamera.cpp
src/: Cube.cpp  Cursor.cpp  FreeFlyCamera.cpp  Interface.cpp  Lights.cpp  Math.cpp  Scene.cpp  Texture.cpp  TrackballCamera.cpp  View.cpp  main.cpp  math.cpp
src/savedScenes/: chalet  citrouille  yoshi
src/shaders/: 3D.vs.glsl  3DMultiTex.fs.glsl  cursor.fs.glsl  cursor.vs.glsl  multiTex3D.fs.glsl  normals.fs.glsl  tex3D.fs.glsl
